# ThaqalaynDataGenerator

./: .gitignore  CLAUDE.md  PIPELINE_CHANGELOG.md  Pipfile  README.md  add_data.ps1  package-lock.json  package.json  pyproject.toml  regen_all.ps1  regen_and_deploy_search.ps1  regen_search.ps1  regen_words.ps1
app/: ai_content_merger.py  ai_pipeline.py  ai_pipeline_cache.py  ai_pipeline_review.py  ai_translation.py  altafsir_converter.py  arabic_normalization.py  basair.py  base_parser.py  book_registry.py  books.py  build_ai_indexes.py  chapter_translations.py  config.py  create_indices.py  cross_validate.py  ghbook.py  ghbook_parser.py  kafi.py  kafi_corrections.py  kafi_narrators.py  kafi_sarwar.py  lib_bs4.py  lib_db.py  lib_index.py  lib_model.py  link_books.py  link_chains.py  link_chapters.py  link_quran_fuzzy.py  link_quran_kafi.py  main_add.py  main_upload.py  narrator_analysis.py  narrator_linker.py  narrator_registry.py  quran.py  search_index.py  tafsir_converter.py  thaqalayn_api.py  (+2 more)
scripts/: V4_PIPELINE_PLAN.md  agents_vs_plain_output.txt  analyse_run.py  apply_faqih_arabic_titles.py  audit_enrich_key_terms.py  audit_unlinked_narrators.py  batch_evaluation_results.md  batch_improve.py  benchmark_phase1.py  benchmark_phase1_analyze.py  benchmark_phase1_qwen.py  benchmark_phase1_qwen_round_b.py  benchmark_phase1_qwen_round_c.py  benchmark_phase2.py  benchmark_phase3_spark.py  benchmark_phase4_analyze.py  benchmark_phase4_dump_pairs.py  benchmark_phase4_qwen.py  benchmark_phase4_qwen_round2.py  benchmark_phase4_qwen_round3_retry.py  benchmark_phase4_qwen_round4_perlang.py  benchmark_phase4_qwen_round_d.py  benchmark_phase4_sample.py  benchmark_phased.py  build_canonical_registry.py  build_enrichment_maps.py  build_hawramani_structured.py  build_lanes_structured.py  build_narrator_analysis.py  build_path_b_pilot_set.py  build_verse_counts.py  build_word_indexes.py  build_word_pages.py  chapter_title_index_al-istibsar.json  chapter_title_index_tahdhib-al-ahkam.json  chapter_title_prompt.txt  chapter_title_prompt_al-istibsar.txt  chapter_title_prompt_tahdhib-al-ahkam.txt  chapter_title_response_al-istibsar.txt  chapter_title_response_tahdhib-al-ahkam.txt  (+42 more)
search/: buildOramaIndexes.mjs  createIndex.js  exampleIndex.js  searchIndex.js
tests/: conftest.py  test_ai_content_merger.py  test_ai_pipeline.py  test_ai_pipeline_cache.py  test_ai_pipeline_review.py  test_ai_translation.py  test_arabic_normalization.py  test_arabic_normalize.py  (+38 more)
(+81 files in other folders)
