[project]
name = "thaqalayn-data-generator"
version = "0.1.0"
description = "Parses Islamic scripture data and generates JSON files for the Thaqalayn mobile app"
requires-python = ">=3.8"
dependencies = [
    "beautifulsoup4",
    "fastapi",
    "marshmallow-dataclass",
    "marshmallow-enum",
    "jsons",
]

[project.optional-dependencies]
dev = [
    "pylint",
    "autopep8",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
omit = [
    "app/queries/*",
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
